--- a/static/css/maqola.css
+++ b/static/css/maqola.css
@@ -17,7 +17,7 @@ html{
     scroll-behavior: smooth;
 }
 body {
-    height: 100vh;
+    height: 100%;
     width: 100%;
     background: var(--link1hover);
 }
