hower animation aded

--- a/static/css/maqola.css
+++ b/static/css/maqola.css
@@ -13,6 +13,7 @@
     --light-gray: #232323;
     --accent-color: #282b42;
     --backgroundOfLink: #020202;
+    --hover_animation: (.5s,1s);
 }
 html{
     scroll-behavior: smooth;
